# iot-monitoring-system-serverless

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.rules  main.py
backend/: Dockerfile  check_firestore.py  cloudbuild.yaml  pyproject.toml
backend/src/: main.py
backend/src/application/: use_cases.py
backend/src/domain/: entities.py  repositories.py
backend/src/infrastructure/: firestore_repository.py  mqtt_client.py
backend/src/interfaces/: api.py  schemas.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_use_cases.py
device-iot/: iot_sensor.ino
frontend/: index.html
frontend/src/: app.js
